# LiteBench

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: custom_task.yaml
src/litebench/: __init__.py  __main__.py  cli.py  config.py
src/litebench/core/: models.py  runner.py  storage.py
src/litebench/llm/: client.py
src/litebench/output/: console.py
src/litebench/scorers/: exec_code.py  extract_number.py  llm_judge.py  multiple_choice.py
src/litebench/server/: app.py
src/litebench/server/static/: index.html
src/litebench/tasks/: __init__.py  arc.py  base.py  custom.py  gsm8k.py  gsm8k_agent.py  humaneval.py  math_task.py  mmlu.py  truthfulqa.py
tests/: test_custom_task.py  test_scorers.py  test_storage_export.py
