[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litebench"
version = "0.1.0"
description = "A pip-installable benchmark runner for LLMs and agents. 5 minutes to your first eval."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Yufeng He", email = "40085740+he-yufeng@users.noreply.github.com" },
]
keywords = [
    "llm",
    "benchmark",
    "evaluation",
    "eval",
    "agent",
    "humaneval",
    "gsm8k",
    "mmlu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.40",
    "datasets>=2.14",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "httpx>=0.25",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/he-yufeng/LiteBench"
Repository = "https://github.com/he-yufeng/LiteBench"
Issues = "https://github.com/he-yufeng/LiteBench/issues"

[project.scripts]
litebench = "litebench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litebench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# SIM113: our loops with `taken += 1` also have `continue` paths that skip rows,
# so the counter genuinely isn't the enumerate index.
ignore = ["E501", "SIM113"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
